fix: bullet threading issue on small screens

--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -153,7 +153,7 @@
 
 // Fix https://github.com/pengx17/logseq-plugin-bullet-threading/issues/1
 @media (max-width: 640px) {
-  .ls-block[haschild="true"] > div > .block-content-wrapper::before {
+  .ls-block[haschild] > div > .block-content-wrapper::before {
     left: -11px;
   }
 }
